修改代码，兼容streampark部署