@@ -12,15 +12,17 @@ public class DwdCartAddApp extends BaseSQLApp {
         super(Constant.DWD_CART_ADD_SERVER_PORT, Constant.PARALLELISM, Constant.DWD_CART_ADD);
     }
 
+    public DwdCartAddApp(boolean isClusterMode) {
+        super(Constant.DWD_CART_ADD_SERVER_PORT, Constant.PARALLELISM, Constant.DWD_CART_ADD, isClusterMode);
+    }
+
     /**
      * 启动参数
-     * --add-opens java.base/java.nio=ALL-UNNAMED
-     * --add-opens java.base/sun.nio.ch=ALL-UNNAMED
-     * --add-opens java.base/java.lang=ALL-UNNAMED
-     * --add-opens java.base/java.util=ALL-UNNAMED
+     * --cluster  使用集群模式（StreamPark提交时传入）
      */
     public static void main(String[] args) throws Exception {
-        new DwdCartAddApp().run();
+        boolean isClusterMode = hasClusterFlag(args);
+        new DwdCartAddApp(isClusterMode).run();
     }
 
     @Override
