@@ -13,15 +13,17 @@ public class DwdOrderDetailApp extends BaseSQLApp {
         super(Constant.DWD_ORDER_DETAIL_SERVER_PORT, Constant.PARALLELISM, Constant.DWD_ORDER_DETAIL);
     }
 
+    public DwdOrderDetailApp(boolean isClusterMode) {
+        super(Constant.DWD_ORDER_DETAIL_SERVER_PORT, Constant.PARALLELISM, Constant.DWD_ORDER_DETAIL, isClusterMode);
+    }
+
     /**
      * 启动参数
-     * --add-opens java.base/java.nio=ALL-UNNAMED
-     * --add-opens java.base/sun.nio.ch=ALL-UNNAMED
-     * --add-opens java.base/java.lang=ALL-UNNAMED
-     * --add-opens java.base/java.util=ALL-UNNAMED
+     * --cluster  使用集群模式（StreamPark提交时传入）
      */
     public static void main(String[] args) throws Exception {
-        new DwdOrderDetailApp().run();
+        boolean isClusterMode = hasClusterFlag(args);
+        new DwdOrderDetailApp(isClusterMode).run();
     }
 
     @Override
