@@ -24,16 +24,17 @@ public class DwsSkuOrderStatisticsApp extends BaseApp {
         super(Constant.DWS_SKU_ORDER_STATISTICS_SERVER_PORT, Constant.PARALLELISM, Constant.DWD_ORDER_DETAIL, Constant.DWS_TRADE_SKU_ORDER_STATISTICS);
     }
 
+    public DwsSkuOrderStatisticsApp(boolean isClusterMode) {
+        super(Constant.DWS_SKU_ORDER_STATISTICS_SERVER_PORT, Constant.PARALLELISM, Constant.DWD_ORDER_DETAIL, Constant.DWS_TRADE_SKU_ORDER_STATISTICS, isClusterMode);
+    }
+
     /**
      * 启动参数
-     * --add-opens java.base/java.nio=ALL-UNNAMED
-     * --add-opens java.base/sun.nio.ch=ALL-UNNAMED
-     * --add-opens java.base/java.lang=ALL-UNNAMED
-     * --add-opens java.base/java.util=ALL-UNNAMED
-     * 建表语句字符串用VARCHAR，指定字符串大小
+     * --cluster  使用集群模式（StreamPark提交时传入）
      */
     public static void main(String[] args) throws Exception {
-        new DwsSkuOrderStatisticsApp().run();
+        boolean isClusterMode = hasClusterFlag(args);
+        new DwsSkuOrderStatisticsApp(isClusterMode).run();
     }
 
     @Override
